--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -8,7 +8,6 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin\Gemini" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="D:\Games\StarCraft II eng\" />
 				<Option object_output="obj_exe\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,12 +31,19 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="lua\include" />
 		</Compiler>
 		<Linker>
 			<Add library="gdi32" />
 			<Add library="user32" />
 			<Add library="kernel32" />
+			<Add library="lua5.1" />
+			<Add directory="lua\lib" />
 		</Linker>
+		<Unit filename="src\Gemini\folderbrowser.cpp" />
+		<Unit filename="src\Gemini\folderbrowser.h" />
+		<Unit filename="src\Gemini\luautil.cpp" />
+		<Unit filename="src\Gemini\luautil.h" />
 		<Unit filename="src\Gemini\main.cpp" />
 		<Unit filename="src\Gemini\main.h" />
 		<Unit filename="src\Gemini\resource.h" />
