--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -5,7 +5,6 @@
 		<Option title="Gemini" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="src\Gemini\;" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin\GeminiD" prefix_auto="1" extension_auto="1" />
@@ -53,6 +52,8 @@
 		<Unit filename="src\Gemini\resource.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
+		<Unit filename="src\pipe.cpp" />
+		<Unit filename="src\pipe.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
