--- a/GeHack.cbp
+++ b/GeHack.cbp
@@ -24,7 +24,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin\GeHack" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\" />
+				<Option object_output="obj_dll\" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
