--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -18,7 +18,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin\Gemini" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\" />
+				<Option object_output="obj_exe\" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
