--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -40,25 +40,16 @@
 			<Add library="lua5.1" />
 			<Add directory="lua\lib" />
 		</Linker>
-		<Unit filename="src\Gemini\folderbrowser.cpp" />
-		<Unit filename="src\Gemini\folderbrowser.h" />
 		<Unit filename="src\Gemini\injections.cpp" />
 		<Unit filename="src\Gemini\injections.h" />
 		<Unit filename="src\Gemini\luautil.cpp" />
 		<Unit filename="src\Gemini\luautil.h" />
 		<Unit filename="src\Gemini\main.cpp" />
 		<Unit filename="src\Gemini\main.h" />
-		<Unit filename="src\Gemini\resource.h" />
-		<Unit filename="src\Gemini\resource.rc">
-			<Option compilerVar="WINDRES" />
-		</Unit>
-		<Unit filename="src\ipsmes.cpp" />
-		<Unit filename="src\ipsmes.h" />
-		<Unit filename="src\pipe.cpp" />
-		<Unit filename="src\pipe.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
