--- a/GeminiClient.cbp
+++ b/GeminiClient.cbp
@@ -46,14 +46,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-DBUILD_GEMINI_CLIENT_DLL" />
-			<Add directory="." />
+			<Add directory="cs-ipc\cs-ipc" />
 			<Add directory="G:\backup\dev\boost_1_50_0" />
 		</Compiler>
-		<ResourceCompiler>
-			<Add directory=".\csipc\" />
-		</ResourceCompiler>
 		<Linker>
-			<Add directory=".\csipc\" />
+			<Add directory="cs-ipc\cs-ipc\csipc" />
 		</Linker>
 		<Unit filename="src\GeminiClient\main.cpp" />
 		<Unit filename="src\GeminiClient\main.h" />
