--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -13,8 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-masm=intel" />
+					<Add option="-DDEBUG" />
 				</Compiler>
+				<Linker>
+					<Add option="-lboost_program_options-mgw46-mt-d-1_50" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin\Gemini" prefix_auto="1" extension_auto="1" />
@@ -26,26 +29,25 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lboost_program_options-mgw46-mt-1_50" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="lua\include" />
+			<Add option="-DUNICODE" />
+			<Add option="-D_UNICODE" />
+			<Add directory="G:\backup\dev\boost_1_50_0" />
 		</Compiler>
 		<Linker>
 			<Add library="gdi32" />
 			<Add library="user32" />
 			<Add library="kernel32" />
-			<Add library="lua5.1" />
-			<Add directory="lua\lib" />
+			<Add directory="G:\backup\dev\boost_1_50_0\stage\lib" />
 		</Linker>
 		<Unit filename="src\Gemini\injections.cpp" />
 		<Unit filename="src\Gemini\injections.h" />
-		<Unit filename="src\Gemini\luautil.cpp" />
-		<Unit filename="src\Gemini\luautil.h" />
 		<Unit filename="src\Gemini\main.cpp" />
-		<Unit filename="src\Gemini\main.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
