--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -11,12 +11,19 @@
 				<Option object_output="obj_exe\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters='-r &quot;D:\Games\StarCraft II eng\Support\SC2Editor.exe&quot; -l GeminiClient.dll' />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-DDEBUG" />
+					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
 					<Add option="-lboost_program_options-mgw46-mt-d-1_50" />
+					<Add option="-lboost_filesystem-mgw46-mt-d-1_50" />
+					<Add option="-lboost_system-mgw46-mt-d-1_50" />
+					<Add option="-lcs-ipc-d" />
+					<Add option="-lole32" />
+					<Add option="-loleaut32" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -30,6 +37,11 @@
 				<Linker>
 					<Add option="-s" />
 					<Add option="-lboost_program_options-mgw46-mt-1_50" />
+					<Add option="-lboost_filesystem-mgw46-mt-1_50" />
+					<Add option="-lboost_system-mgw46-mt-1_50" />
+					<Add option="-lcs-ipc" />
+					<Add option="-lole32" />
+					<Add option="-loleaut32" />
 				</Linker>
 			</Target>
 		</Build>
@@ -38,12 +50,14 @@
 			<Add option="-DUNICODE" />
 			<Add option="-D_UNICODE" />
 			<Add directory="G:\backup\dev\boost_1_50_0" />
+			<Add directory=".\cs-ipc\cs-ipc\" />
 		</Compiler>
 		<Linker>
 			<Add library="gdi32" />
 			<Add library="user32" />
 			<Add library="kernel32" />
 			<Add directory="G:\backup\dev\boost_1_50_0\stage\lib" />
+			<Add directory=".\cs-ipc\cs-ipc\csipc\" />
 		</Linker>
 		<Unit filename="src\Gemini\injections.cpp" />
 		<Unit filename="src\Gemini\injections.h" />
