--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -8,10 +8,11 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin\GeminiD" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin" />
 				<Option object_output="obj_exe\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters='-r &quot;D:\Games\StarCraft II eng\Support\SC2Editor.exe&quot; -l GeminiClient.dll' />
+				<Option parameters='-r &quot;D:\Games\StarCraft II eng\Support\SC2Editor.exe&quot; -L plugins' />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-DDEBUG" />
@@ -28,6 +29,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin\Gemini" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin" />
 				<Option object_output="obj_exe\" />
 				<Option type="0" />
 				<Option compiler="gcc" />
