--- a/GeHack.cbp
+++ b/GeHack.cbp
@@ -19,6 +19,8 @@
 					<Add option="-DBUILD_DLL" />
 				</Compiler>
 				<Linker>
+					<Add option="-lboost_filesystem-mgw46-mt-d-1_50" />
+					<Add option="-lboost_system-mgw46-mt-d-1_50" />
 					<Add option="-lcs-ipc-d" />
 					<Add option="-lole32" />
 					<Add option="-loleaut32" />
@@ -39,6 +41,8 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lboost_filesystem-mgw46-mt-1_50" />
+					<Add option="-lboost_system-mgw46-mt-1_50" />
 					<Add option="-lcs-ipc" />
 					<Add option="-lole32" />
 					<Add option="-loleaut32" />
@@ -51,11 +55,13 @@
 			<Add option="-D_UNICODE" />
 			<Add directory=".\cs-ipc\cs-ipc" />
 			<Add directory=".\src\" />
+			<Add directory="G:\backup\dev\boost_1_50_0" />
 		</Compiler>
 		<Linker>
 			<Add option="-lGeminiClient" />
 			<Add directory=".\cs-ipc\cs-ipc\csipc" />
 			<Add directory="bin" />
+			<Add directory="G:\backup\dev\boost_1_50_0\stage\lib" />
 		</Linker>
 		<Unit filename="src\GeHack\iat.cpp" />
 		<Unit filename="src\GeHack\iat.h" />
