--- a/Gemini.cbp
+++ b/Gemini.cbp
@@ -31,8 +31,9 @@
 				<Option output="bin\Gemini" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin" />
 				<Option object_output="obj_exe\" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
