--- a/scriptalter.cbp
+++ b/scriptalter.cbp
@@ -14,6 +14,13 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lboost_filesystem-mgw46-mt-d-1_50" />
+					<Add option="-lboost_system-mgw46-mt-d-1_50" />
+					<Add option="-lcs-ipc-d" />
+					<Add option="-lole32" />
+					<Add option="-loleaut32" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin\scriptalter" prefix_auto="1" extension_auto="1" />
@@ -25,17 +32,31 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lboost_filesystem-mgw46-mt-1_50" />
+					<Add option="-lboost_system-mgw46-mt-1_50" />
+					<Add option="-lcs-ipc" />
+					<Add option="-lole32" />
+					<Add option="-loleaut32" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-DUNICODE" />
+			<Add option="-D_UNICODE" />
+			<Add directory="G:\backup\dev\boost_1_50_0" />
+			<Add directory=".\cs-ipc\cs-ipc" />
 		</Compiler>
+		<Linker>
+			<Add directory="G:\backup\dev\boost_1_50_0\stage\lib" />
+			<Add directory=".\cs-ipc\cs-ipc\csipc" />
+		</Linker>
 		<Unit filename="src\scriptalter\main.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
